crates/action-graph/tests/snapshots/action_graph_builder_test__action_graph_builder__run_task_by_target_locator__runs_by_project_glob.snap
---
source: crates/action-graph/tests/action_graph_builder_test.rs
expression: graph.to_dot()
---
digraph {
    0 [ label="SyncWorkspace"]
    1 [ label="SyncProject(client)"]
    2 [ label="SyncProject(server)"]
    3 [ label="SyncProject(common)"]
    4 [ label="SyncProject(base)"]
    5 [ label="RunTask(client:test)"]
    2 -> 0 [ label="required"]
    4 -> 0 [ label="required"]
    3 -> 0 [ label="required"]
    3 -> 4 [ label="required"]
    1 -> 0 [ label="required"]
    1 -> 2 [ label="required"]
    1 -> 3 [ label="required"]
    5 -> 1 [ label="required"]
}
